--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.0.1",
     "@types/react": "^17.0.0",
     "@types/react-router-dom": "^5.1.6"
   }
